--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,7 @@
-spring:
-  application:
-      name: config-default
+# spring:
+#   application:
+#       name: config-default
+
 eureka:
   instance:
     prefer-ip-address: true
